--- a/assessment1/index.html
+++ b/assessment1/index.html
@@ -8,6 +8,9 @@
 	
 	<title>ASSESSMENT #1</title>
 	
+	<!-- Google Font -->
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,600,300' rel='stylesheet' type='text/css'>
+	
 	<!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -26,7 +29,7 @@
 		<div class="container">
 		
 			<!-- Logo -->
-			<a href="#" class="modal-btn"><img class="logo" src="img/100x100.png"></a>
+			<a href="#" class="modal-btn"><img class="logo" src="img/logo.png"></a>
 			
 			<!-- Modal -->
 			<div class="modal-overlay"></div>
@@ -70,28 +73,28 @@
 		
 			<div class="col-sm-6 box">
 				<div class="img-responsive">
-					<span><img src="img/480×420.png"></span>
+					<span><img src="img/news-img1.jpg"></span>
 				</div>
 				<h2>Lorem ipsum dolor sit amet</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Graccho, eius fere, aequalí? Vide, quantum, inquam, fallare, Torquate.</p><p>Confecta res esset. Cave putes quicquam esse verius. Quo modo autem philosophus loquitur? Sed virtutem ipsam inchoavit, nihil amplius. Minime vero istorum quidem.</p>
 			</div>
 			<div class="col-sm-6 box">
 				<div class="img-responsive">
-					<span><img src="img/500×500.png"></span>
+					<span><img src="img/news-img2.jpg"></span>
 				</div>
 				<h2>Cave putes quicquam esse verius</h2>
 				<p>Confecta res esset. Cave putes quicquam esse verius. Quo modo autem philosophus loquitur? Sed virtutem ipsam inchoavit, nihil amplius. Minime vero istorum quidem, inquit. Quonam, inquit, modo?</p><p>Duo Reges: constructio interrete. Inde igitur, inquit, ordiendum est. Vide, quantum, inquam, fallare, Torquate. Prodest, inquit.</p>
 			</div>
 			<div class="col-sm-6 box">
 				<div class="img-responsive">
-					<span><img src="img/630×325.png"></span>
+					<span><img src="img/news-img3.jpg"></span>
 				</div>
 				<h2>Erat enim res aperta</h2>
 				<p>Lorem ipsum dolor sit amet, Cave putes quicquam esse verius. Graccho, eius fere, aequalí? Vide, quantum, inquam, fallare, Torquate.</p><p>Erat enim res aperta. Nemo igitur esse beatus potest. Tubulo putas dicere? Primum quid tu dicis breve? </p>
 			</div>
 			<div class="col-sm-6 box">
 				<div class="video-responsive">
-					<iframe src="https://www.youtube.com/embed/xAJBvBduqUE?rel=0"></iframe>
+					<iframe src="https://www.youtube.com/embed/mGnVOfk_F_8?rel=0"></iframe>
 				</div>
 				<h2>Nemo enim ipsam voluptatem</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Graccho, eius fere, aequalí? Vide, quantum, inquam, fallare, Torquate.</p><p>Duo Reges: constructio interrete. Inde igitur, inquit, ordiendum est. Vide, quantum, inquam, fallare, Torquate. Prodest, inquit, mihi eo esse animo.</p>
@@ -121,9 +124,9 @@
 				<div class="col-sm-6 col-md-3 box">
 					<h3>Sed do eiusmod tempor</h3>
 					<ul class="footer-gallery">
-						<li><img src="img/200×200.png"></li>
-						<li><img src="img/200×200.png"></li>
-						<li><img src="img/200×200.png"></li>
+						<li><img src="img/foot-img1.jpg"></li>
+						<li><img src="img/foot-img2.jpg"></li>
+						<li><img src="img/foot-img3.jpg"></li>
 					</ul>
 				</div>
 				
