--- a/assessment1/index.html
+++ b/assessment1/index.html
@@ -73,21 +73,21 @@
 		
 			<div class="col-sm-6 box">
 				<div class="img-responsive">
-					<span><img src="img/news-img1.jpg"></span>
+					<img src="img/news-img1.jpg">
 				</div>
 				<h2>Lorem ipsum dolor sit amet</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Graccho, eius fere, aequalí? Vide, quantum, inquam, fallare, Torquate.</p><p>Confecta res esset. Cave putes quicquam esse verius. Quo modo autem philosophus loquitur? Sed virtutem ipsam inchoavit, nihil amplius. Minime vero istorum quidem.</p>
 			</div>
 			<div class="col-sm-6 box">
 				<div class="img-responsive">
-					<span><img src="img/news-img2.jpg"></span>
+					<img src="img/news-img2.jpg">
 				</div>
 				<h2>Cave putes quicquam esse verius</h2>
 				<p>Confecta res esset. Cave putes quicquam esse verius. Quo modo autem philosophus loquitur? Sed virtutem ipsam inchoavit, nihil amplius. Minime vero istorum quidem, inquit. Quonam, inquit, modo?</p><p>Duo Reges: constructio interrete. Inde igitur, inquit, ordiendum est. Vide, quantum, inquam, fallare, Torquate. Prodest, inquit.</p>
 			</div>
 			<div class="col-sm-6 box">
 				<div class="img-responsive">
-					<span><img src="img/news-img3.jpg"></span>
+					<img src="img/news-img3.jpg">
 				</div>
 				<h2>Erat enim res aperta</h2>
 				<p>Lorem ipsum dolor sit amet, Cave putes quicquam esse verius. Graccho, eius fere, aequalí? Vide, quantum, inquam, fallare, Torquate.</p><p>Erat enim res aperta. Nemo igitur esse beatus potest. Tubulo putas dicere? Primum quid tu dicis breve? </p>
